--- a/style.css
+++ b/style.css
@@ -4,11 +4,69 @@
 }
 
 #canticles-table {
+    width: 100%;
+    font-size: 2rem;
+}
 
+#canticles-table th {
+    color: whitesmoke;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    letter-spacing: 3px;
+}
+
+#canticles-table th:last-child, td:last-child {
+    text-align: right;
+}
+
+#canticles-table tr {
+    background-color: #1a1a1a;
+}
+
+#canticles-table tr:first-child {
+    background-color: #000;
+}
+
+#canticles-table td {
+    color: #ffe600;
+    font-family: 'DOTMATRI', monospace;
+}
+
+#datetime-row {
+    font-size: 3.5rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#dayOfWeek {
+    position: absolute;
+    right: 0;   
+    padding-right: 2.3rem;
+}
+
+#date {
+    position: absolute;
+    left: 0;   
+    padding-left: 2.3rem;
+}
+
+#canticles-table {
+    border-collapse: collapse;
+}
+
+#canticles-table th,
+#canticles-table td {
+    border-bottom: 0.2rem solid #000;
+    padding: 0.5rem;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
 }
 
 body {
-    /* background-color: #1a1a1a; */
+    background-color: #000;
+    padding: 1rem;
 }
 
     /* background-color: #1a1a1a;
