--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@
 }
 
 #date {
-position: absolute;
-right: 0;   
-padding-right: 2.3rem;
+    position: absolute;
+    right: 0;   
+    padding-right: 2.3rem;
 }
 
 #dayOfWeek {
@@ -60,8 +60,12 @@ padding-right: 2.3rem;
 #canticles-table td {
     border-bottom: 0.2rem solid #000;
     padding: 0.5rem;
-    padding-left: 0.75rem;
+    padding-left: 1.25rem;
     padding-right: 0.75rem;
+}
+
+#canticles-table th {
+    padding-left: 0.75rem;
 }
 
 body {
