--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 #canticles-table {
     width: 100%;
-    font-size: 2rem;
+    font-size: 2.7rem;
 }
 
 #canticles-table th {
@@ -37,19 +37,26 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: flex-end;
+    height: 100%;
+}
+
+#time {
+    font-size: 5rem;
 }
 
 #date {
     position: absolute;
-    right: 0;   
+    right: 0;
     padding-right: 2.3rem;
+    padding-bottom: 0.85rem;
 }
 
 #dayOfWeek {
     position: absolute;
-    left: 0;   
+    left: 0;
     padding-left: 2.3rem;
+    padding-bottom: 0.85rem;
 }
 
 #canticles-table {
@@ -72,9 +79,3 @@ body {
     background-color: #000;
     padding: 1rem;
 }
-
-    /* background-color: #1a1a1a;
-    color: #ffe600;
-    font-family: 'DOTMATRI', monospace;
-    letter-spacing: 3px;
-    font-size: 52px; */
